syntax = "proto3";

option java_package = "com.example.grpc";

service UserService {
    rpc login(LoginRequest) returns (LoginResponse);
}

message LoginRequest{
    string username = 1;
    string password = 2;
}

message LoginResponse{
    int32 responseCode = 1;
    string responseMessage = 2;
}